# mtx

./: INSTALL  Makefile.am  README.md  configure.ac
src/: Makefile.am  Matrix.cc  Matrix.hh  cov.gp  eigens.cc  eigens.hh  genr.apl  genr.gp  mtx.cc  pca.apl  pca.gp  scatter.gp
